--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grilla de Tarjetas</title>
-    <link rel="stylesheet" href="C:\Users\diego.rojas\Downloads\PROYECT HTML\ASSENTS\CSS\estilo.css">
+    <link rel="stylesheet" href="C:\Users\alejandro.alvarez\Downloads\PROYECT HTML\ASSENTS\CSS\estilo.css">
 </head>
 <body>
     <H1>Galería de Guayos</H1>
@@ -16,6 +16,6 @@
     <div class="grid-container" id="grid-container">
         <!-- se generan dinamicamente por el js-->
     </div>
-    <script src="C:\Users\diego.rojas\Downloads\PROYECT HTML\ASSENTS\JS\jsscript.js"></script>
+    <script src="C:\Users\alejandro.alvarez\Downloads\PROYECT HTML\ASSENTS\JS\jsscript.js"></script>
 </body>
 </html>
